--- a/hugo/layouts/partials/author.html
+++ b/hugo/layouts/partials/author.html
@@ -1,13 +1,21 @@
 <div class="author">
-  <a class="author__trace-of-me" href="/">
-    <img class="author__trace-of-me__regular" src="/images/Avatar Trace.svg" />
-    <img class="author__trace-of-me__eyebrow" src="/images/Eyebrow Raise.svg" />
+  <a class="author__logo" href="/">
+    <img class="author__logo__regular" src="/images/Avatar Trace.svg" />
+    <img class="author__logo__eyebrow" src="/images/Eyebrow Raise.svg" />
   </a>
   <div class="author__site-text">
     <a href="/">
       <div class="author__site-title">Zerø Wind</div>
     </a>
     <div class="author__my-name">Jamie Wong</div>
+    <div class="author__elsewhere">
+      <a href="https://twitter.com/jlfwong">
+        <img src="/images/icons/twitter.svg" alt="twitter" />
+      </a>
+      <a href="http://github.com/jlfwong">
+        <img src="/images/icons/github.svg" alt="github" />
+      </a>
+    </div>
     {{ if .IsPage }}
     <div class="author__post-date">{{ .Date.Format "January 2, 2006" }}</div>
     {{ end }}
